# ente

./: .CODEX_PLAN.md.swp  .gitignore  CLAUDE.md  CLIENT_CODEX_NESTED.md  CLIENT_SIDE_NESTED.md  CODEX_PLAN.md  CONTRIBUTING.md  DEBUG_SHARE_LINK_BUG.md  FINAL_PLAN.md  IMP.md  NESTED_ALBUMS_IMPLEMENTATION_STATUS.md  PLAN_COMPARISON.md  PRODUCT.md  SERVER_CODEX_NESTED.md  SERVER_SIDE_NESTED.md  nested_codex.md
.github/workflows/: auth-release-linux-arm.yml  auth-release.yml  server-lint.yml
cli/cmd/: album.go
cli/pkg/: public_album.go  random.go
desktop/src/: preload.ts
desktop/src/main/: ipc.ts
rust/: README.md
rust/cli/: Cargo.toml
rust/core/: Cargo.toml  README.md
rust/core/docs/: auth.md  crypto.md
rust/core/src/: lib.rs
rust/core/src/auth/: api.rs  mod.rs
rust/core/src/crypto/: argon.rs  blob.rs  error.rs  hash.rs  kdf.rs  keys.rs  mod.rs  sealed.rs  secretbox.rs  stream.rs
rust/core/src/crypto/impl_pure/: argon.rs  hash.rs  kdf.rs  mod.rs  sealed.rs  secretbox.rs  stream.rs
rust/core/tests/: auth_integration.rs  comprehensive_crypto_tests.rs  crypto_interop.rs  js_interop_test.mjs  libsodium_vectors.rs
rust/ensu_uniffi/: Cargo.toml  build.rs
rust/ensu_uniffi/src/: ensu_uniffi.udl  lib.rs
rust/llmchat-db/: Cargo.toml
rust/llmchat-db/src/: crypto.rs  db.rs  error.rs  lib.rs  migrations.rs  models.rs  schema.rs  traits.rs
rust/llmchat-db/src/backend/: mod.rs  sqlite.rs
rust/validation/: README.md
server/ente/: collection.go  remotestore.go
server/migrations/: 105_nested_collections.down.sql  105_nested_collections.up.sql  115_add_ensu_chat_schema.down.sql  115_add_ensu_chat_schema.up.sql  115_add_llmchat_chat_schema.down.sql  115_add_llmchat_chat_schema.up.sql  116_rename_llmchat_chat_tables.down.sql  116_rename_llmchat_chat_tables.up.sql  117_add_llmchat_plaintext_fields.down.sql  117_add_llmchat_plaintext_fields.up.sql  (+2 more)
(+720 files in other folders)
