[package]
name = "ente-core"
version = "0.0.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "system-proxy", "json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Cryptography - ONLY libsodium (statically linked)
libsodium-sys-stable = "1.20"
base64 = "0.22"
hex = "0.4"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# Require tests for public functions (enforced via CI/review)
# missing_panics_doc = "warn"
# missing_errors_doc = "warn"
