[package]
name = "llmchat-db"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"

description = "Local chat database for Ente LLM chat"

[dependencies]
ente-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
